--- a/member_list/index.html
+++ b/member_list/index.html
@@ -169,7 +169,7 @@
             };
         }
 
-        fetch('https://mito1-website.loca.lt/files/names.json', {
+        fetch('/mito1-website/private/names.json', {
             headers: makeHeaders("talus", "talus"),
             cache: "no-store",
         })
