--- a/mypage/index.html
+++ b/mypage/index.html
@@ -151,7 +151,7 @@
         });
 
         // --- 学籍番号取得 ---
-        fetch("https://mito1-website.loca.lt/files/names.json")
+        fetch("/mito1-website/private/names.json")
             .then(response => response.json())
             .then(data => {
                 const classes = Object.keys(data);
