docs: update CHANGELOG.md

--- a/timetable/index.html
+++ b/timetable/index.html
@@ -75,7 +75,7 @@
         </section>
         <section>
             <h2>お詫び</h2>
-            <p>サーバー関係の不具合で、2025-12-09 ~ 2025-12-16の時間割が保存されていなかったことに現在(2025-12-18)気が付きました…^^;</p>
+            <p>サーバー関係の不具合で、2025-12-09〜2025-12-16の時間割が保存されていなかったことに現在(2025-12-18)気が付きました…^^;</p>
             <p>そもそも保存がされていなかったようなので、残念ながら閲覧することができません…</p>
             <p>ご不便をおかけして申し訳ありません。</p>
         </section>
