--- a/bbs/new_thread/index.html
+++ b/bbs/new_thread/index.html
@@ -388,7 +388,8 @@
     <script type="module" src="../../script/notification.js"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../../manifest.json">
-    <script src="../../script/verification.js"></script>
+    <script src="../../script/verification.js" type=module></script>
+
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
