--- a/faq.html
+++ b/faq.html
@@ -143,7 +143,8 @@
     <script src="./script/customAlert.js" type="module"></script>
     <script type="module" src="./script/restriction.js"></script>
     <script type="module" src="./script/notification.js"></script>
-    <script src="./script/verification.js"></script>
+    <script src="./script/verification.js" type=module></script>
+
 </body>
 
 </html>
