--- a/request_music/index.html
+++ b/request_music/index.html
@@ -90,7 +90,8 @@
     </footer>
 
 
-    <script src="../script/verification.js"></script>
+    <script src="../script/verification.js" type=module></script>
+
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     <script type="module">
         import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
@@ -449,7 +450,8 @@
     <script src="../script/customAlert.js" type="module"></script>
     <script type="module" src="../script/restriction.js"></script>
     <script type="module" src="../script/notification.js"></script>
-    <script src="../script/verification.js"></script>
+    <script src="../script/verification.js" type=module></script>
+
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
