fix: script type module -> "module"

--- a/math/quadratic/index.html
+++ b/math/quadratic/index.html
@@ -91,7 +91,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
     <script type="module" src="../../script/notice/notice.js"></script>
-    <script src="../../script/verification.js" type=module></script>
+    <script src="../../script/verification.js" type="module"></script>
 
     <script>
         let a = 1, b = -2, c = -3; // 2次関数 y = ax² + bx + c
