--- a/admin/request_music/index.html
+++ b/admin/request_music/index.html
@@ -272,7 +272,7 @@
     <script type="module" src="../../script/restriction.js"></script>
     <script type="module" src="../../script/notification.js"></script>
     <script type="module" src="../../script/notification.js"></script>
-    <script src="../../script/verification.js" type=module></script>
+    <script src="../../script/verification.js" type="module"></script>
 
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
