--- a/math/2equation/index.html
+++ b/math/2equation/index.html
@@ -68,7 +68,7 @@
     <script src="../../script/customAlert.js" type="module"></script>
     <script type="module" src="../../script/restriction.js"></script>
     <script type="module" src="../../script/notification.js"></script>
-    <script src="../../script/verification.js" type=module></script>
+    <script src="../../script/verification.js" type="module"></script>
 
     <script>
         window.MathJax = {
