--- a/question/details/index.html
+++ b/question/details/index.html
@@ -384,7 +384,7 @@
     <script type="module" src="../../script/notification.js"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../../manifest.json">
-    <script src="../../script/verification.js" type=module></script>
+    <script src="../../script/verification.js" type="module"></script>
 
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
